tests/reference/asr-continue_compilation_2-a6145a1.stderr
syntax error: End module name does not match module name
  --> tests/errors/continue_compilation_2.f90:20:1 - 22:28
   |
20 |    module my_module
   |    ^^^^^^^^^^^^^^^^...
...
   |
22 |    end module wrong_module_name
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End subroutine name does not match subroutine name
  --> tests/errors/continue_compilation_2.f90:54:5 - 56:33
   |
54 |        subroutine my_subroutine1()
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
56 |        end subroutine different_name
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End function name does not match function name
  --> tests/errors/continue_compilation_2.f90:58:5 - 61:32
   |
58 |        function my_function() result(res)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
61 |        end function not_my_function
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: End subroutine name does not match subroutine name
  --> tests/errors/continue_compilation_2.f90:63:5 - 65:33
   |
63 |        subroutine my_subroutine2()
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
65 |        end subroutine different_name 
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

syntax error: Invalid syntax for variable initialization (try inserting '::' after the type)
   --> tests/errors/continue_compilation_2.f90:147:5
    |
147 |     integer init_x = 1
    |     ^^^^^^^^^^^^^^^^^^ 

syntax error: kind 16 is not supported yet.
   --> tests/errors/continue_compilation_2.f90:237:5
    |
237 |     real*16 :: unsupported_kind
    |     ^^^^^^^ 

tokenizer error: Token '?' is not recognized
   --> tests/errors/continue_compilation_2.f90:243:17
    |
243 |     integer  :: ? tokenizer_error
    |                 ^ token not recognized

tokenizer error: Token '@' is not recognized in `format` statement
   --> tests/errors/continue_compilation_2.f90:509:21
    |
509 |     100 FORMAT(A10, @)
    |                     ^ 

semantic error: Global name is already being used
  --> tests/errors/continue_compilation_2.f90:24:1 - 25:21
   |
24 |    subroutine myname
   |    ^^^^^^^^^^^^^^^^^...
...
   |
25 |    end subroutine myname
   | ...^^^^^^^^^^^^^^^^^^^^^ 'myname' defined here
   |
27 |    block data myname
   |    ^^^^^^^^^^^^^^^^^...
...
   |
29 |    
   | ...^ 'myname' defined here again

semantic error: Duplicate DIMENSION attribute specified
  --> tests/errors/continue_compilation_2.f90:45:24
   |
45 |         common /rowns/ rowns(209)
   |                        ^^^^^^^^^^ 

semantic error: Intent attribute can only be applied to procedure arguments
  --> tests/errors/continue_compilation_2.f90:68:18
   |
68 |         INTEGER, INTENT(IN) :: sub_a
   |                  ^^^^^^^^^^ 

semantic error: Dummy argument 'a' not defined
  --> tests/errors/continue_compilation_2.f90:67:5 - 69:36
   |
67 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
69 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'b' not defined
  --> tests/errors/continue_compilation_2.f90:67:5 - 69:36
   |
67 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
69 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Dummy argument 'c' not defined
  --> tests/errors/continue_compilation_2.f90:67:5 - 69:36
   |
67 |        SUBROUTINE faulty_subroutine(a, b, c)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
69 |        END SUBROUTINE faulty_subroutine
   | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Assumed-rank variable 'x' must not have any dimensions specified.
  --> tests/errors/continue_compilation_2.f90:92:20
   |
92 |         integer :: x(.., 5)
   |                    ^^^^^^^^ 

semantic error: Dummy argument 'x' not defined
  --> tests/errors/continue_compilation_2.f90:91:5 - 93:24
   |
91 |        subroutine arank(x)
   |        ^^^^^^^^^^^^^^^^^^^...
...
   |
93 |        end subroutine arank
   | ...^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: OPTIONAL dummy argument 'n' cannot be used for array bounds declaration
   --> tests/errors/continue_compilation_2.f90:117:21
    |
117 |         real :: arr(n)
    |                     ^ hint: use a non-optional argument, or declare the array as `allocatable`

semantic error: Implicit typing is not allowed, enable it by using --implicit-typing 
   --> tests/errors/continue_compilation_2.f90:142:5 - 144:49
    |
142 |        implicit real(a-z)
    |        ^^^^^^^^^^^^^^^^^^...
...
    |
144 |        ! Put declarations below without empty lines
    | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `parameter` attribute conflicts with `pointer` attribute
   --> tests/errors/continue_compilation_2.f90:145:5
    |
145 |     integer, pointer, parameter :: v => null()
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `parameter` attribute conflicts with `allocatable` attribute
   --> tests/errors/continue_compilation_2.f90:146:5
    |
146 |     integer, allocatable, parameter :: v=1
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `int` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:207:54
    |
207 |     integer(8), parameter :: ar1(3) = int([1, 2, 3], [8, 8, 8])
    |                                                      ^^^^^^^^^ 

semantic error: `kind` argument of `int` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:209:54
    |
209 |     integer(8), parameter :: ar2(3) = int([1, 2, 3], [8, 8, 8])
    |                                                      ^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters
   --> tests/errors/continue_compilation_2.f90:211:13
    |
211 |     integer(4.2) :: ifoix
    |             ^^^ 

semantic error: Kind 6 is not supported for Complex
   --> tests/errors/continue_compilation_2.f90:213:13
    |
213 |     complex(6) :: iiocx
    |             ^ 

semantic error: Kind 3 is not supported for Integer
   --> tests/errors/continue_compilation_2.f90:215:13
    |
215 |     integer(3) :: iifix
    |             ^ 

semantic error: Kind 10 is not supported for Logical
   --> tests/errors/continue_compilation_2.f90:217:13
    |
217 |     logical(10) :: iiolx
    |             ^^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:219:13
    |
219 |     complex(*) :: ksoca
    |             ^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:221:13
    |
221 |     integer(*) :: ksoia
    |             ^ 

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:223:13
    |
223 |     logical(*) :: ksola
    |             ^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters
   --> tests/errors/continue_compilation_2.f90:225:13
    |
225 |     integer('a') :: ksoix
    |             ^^^ 

semantic error: Parameter 'kvoia' is a variable, which does not reduce to a constant expression
   --> tests/errors/continue_compilation_2.f90:228:10
    |
228 |     real(kvoia) :: kvoix
    |          ^^^^^ 

semantic error: Symbol is already declared in the same scope
   --> tests/errors/continue_compilation_2.f90:230:16
    |
230 |     real(3) :: x
    |                ^ redeclaration
    |
155 |     integer, parameter :: x = 2
    |                           ~~~~~ original declaration

semantic error: Expected initialization expression for kind
   --> tests/errors/continue_compilation_2.f90:232:10
    |
232 |     real(*) kind2_a
    |          ^ 

semantic error: Parameter attribute cannot be used with Target attribute
   --> tests/errors/continue_compilation_2.f90:234:5
    |
234 |     integer, parameter, target :: foo=4
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Argument was not specified
   --> tests/errors/continue_compilation_2.f90:239:33
    |
239 |     type(Circle) :: myCircle2 = Circle()
    |                                 ^^^^^^^^ Argument 'radius' not specified for circle

semantic error: Keyword argument not found
   --> tests/errors/continue_compilation_2.f90:241:33
    |
241 |     type(Circle) :: myCircle3 = Circle(mykeyword=10)
    |                                 ^^^^^^^^^^^^^^^^^^^^ 'mykeyword' keyword argument not found

semantic error: Incompatible ranks 2 and 1 in assignment
   --> tests/errors/continue_compilation_2.f90:244:36
    |
244 |     integer, dimension(3,2) :: m = [ 1, 0, 0, 2, 4, 6 ]
    |                                    ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Assumed-rank variable 'aRank1' must be a dummy argument.
   --> tests/errors/continue_compilation_2.f90:260:16
    |
260 |     integer :: aRank1(..)
    |                ^^^^^^^^^^ 

semantic error: Array 'a_deferred' with a deferred shape cannot be a local variable; it must be a dummy argument, allocatable, or pointer
   --> tests/errors/continue_compilation_2.f90:266:16
    |
266 |     integer :: a_deferred(:)
    |                ^^^^^^^^^^^^^ 

semantic error: More than one main program found
   --> tests/errors/continue_compilation_2.f90:137:1 - 584:11
    |
137 |    program continue_compilation_2
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
    |
584 |    end program
    | ...^^^^^^^^^^^ first main program defined here
    |
587 |    program second_program_test
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
    |
590 |    end program second_program_test
    | ...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ second main program defined here

semantic error: Allocate should only be called with Allocatable or Pointer type inputs, found `func8`
  --> tests/errors/continue_compilation_2.f90:32:31
   |
32 |     allocate(character(-1) :: FUNC8)
   |                               ^^^^^ 'func8' is not allocatable or pointer

semantic error: Unexpected args, SetExponent expects (real, int) as arguments
  --> tests/errors/continue_compilation_2.f90:46:18
   |
46 |         print *, set_exponent([1, 2, 3], 2)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Cannot assign to an intent(in) variable `y`
  --> tests/errors/continue_compilation_2.f90:51:9
   |
51 |         y = 99  
   |         ^ 

semantic error: Argument `val_a` with intent(in) passed to a dummy argument with modifying intent
  --> tests/errors/continue_compilation_2.f90:73:20
   |
73 |         call sub_b(val_a)
   |                    ^^^^^ 

semantic error: Argument `val_a` with intent(in) passed to a dummy argument with modifying intent
  --> tests/errors/continue_compilation_2.f90:83:26
   |
83 |         res = inner_func(val_a)
   |                          ^^^^^ 

semantic error: Dummy argument 'this' has `intent(out)` and cannot be used for array bounds declaration
   --> tests/errors/continue_compilation_2.f90:108:27
    |
108 |             real :: array(this%n)
    |                           ^^^^^^ hint: use `intent(in/inout)` or `allocatable` for 'this', or pass the size as a separate `intent(in)` argument

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:110:13
    |
110 |             array = [ (i,i = 1,this%n) ]
    |             ^^^^^   ^^^^^^^^^^^^^^^^^^^^ type mismatch (`integer` and `integer[:]`)

semantic error: PRINT statement is not allowed inside a PURE procedure
   --> tests/errors/continue_compilation_2.f90:127:9
    |
127 |         print "(A,I0)", 'b = ', b
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Deferred-length CHARACTER variable must be allocated with a character length `character(..)`
   --> tests/errors/continue_compilation_2.f90:305:14
    |
305 |     allocate(str1(i))
    |              ^^^^^^^ 

semantic error: No custom operator exists for this expression
   --> tests/errors/continue_compilation_2.f90:308:15
    |
308 |     str_t_2 = prefix // 10
    |               ^^^^^^^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:308:5
    |
308 |     str_t_2 = prefix // 10
    |     ^^^^^^^             ^^ type mismatch (string_t and integer)

semantic error: No custom operator exists for this expression
   --> tests/errors/continue_compilation_2.f90:309:15
    |
309 |     str_t_2 = prefix // str_t_1
    |               ^^^^^^^^^^^^^^^^^ 

semantic error: shape argument specified in c_f_pointer even though fptr is not an array.
   --> tests/errors/continue_compilation_2.f90:311:38
    |
311 |     call c_f_pointer(queries_1, y_1, [2])
    |                                      ^^^ 

semantic error: shape array passed to c_f_pointer must be of rank 1 but given rank is 2
   --> tests/errors/continue_compilation_2.f90:313:38
    |
313 |     call c_f_pointer(queries_2, y_2, shape)
    |                                      ^^^^^ 

semantic error: Cannot assign to a constant variable
   --> tests/errors/continue_compilation_2.f90:315:5
    |
315 |     x = 1
    |     ^^^^^ assignment here
    |
155 |     integer, parameter :: x = 2
    |                           ~~~~~ declared as constant

semantic error: More actual than formal arguments in procedure call
   --> tests/errors/continue_compilation_2.f90:318:33
    |
318 |     call myCircle%calculateArea(circleArea, 12)
    |                                 ^^^^^^^^^^^^^^ 

semantic error: Invalid argument `end` supplied
   --> tests/errors/continue_compilation_2.f90:320:5
    |
320 |     CLOSE(end=200)
    |     ^^^^^^^^^^^^^^ 

semantic error: Missing actual argument 'x' in call to 'cmplx'
   --> tests/errors/continue_compilation_2.f90:322:14
    |
322 |     print *, cmplx(y = 2)
    |              ^^^^^^^^^^^^ 

semantic error: Only a literal constant or a named constant is allowed as part of a complex literal constant
   --> tests/errors/continue_compilation_2.f90:324:20
    |
324 |     print*, cmplx((real(1, kind=4), 0.00000000), kind=8)
    |                    ^^^^^^^^^^^^^^^ 

semantic error: Only a literal constant or a named constant is allowed as part of a complex literal constant
   --> tests/errors/continue_compilation_2.f90:326:32
    |
326 |     print*, cmplx((1.00000000, real(0, kind=4)), kind=8)
    |                                ^^^^^^^^^^^^^^^ 

semantic error: Coarrays are not supported yet
   --> tests/errors/continue_compilation_2.f90:334:5
    |
334 |     call event_query(1, 1, 1)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Operands of comparison operator are of different types
   --> tests/errors/continue_compilation_2.f90:338:9
    |
338 |     if (i > x_2) then
    |         ^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
   --> tests/errors/continue_compilation_2.f90:342:14
    |
342 |     size_a = size(a_2, 1, dim=1)
    |              ^^^^^^^^^^^^^^^^^^^ 

semantic error: dim has already been specified as a positional/keyword argument to size
   --> tests/errors/continue_compilation_2.f90:343:14
    |
343 |     size_a = size(a_2, dim = 1, 1)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
   --> tests/errors/continue_compilation_2.f90:345:31
    |
345 |     size_a_2 = size(a_3, kind=kindvar, dim=1)
    |                               ^^^^^^^ 

semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
   --> tests/errors/continue_compilation_2.f90:346:31
    |
346 |     size_a_2 = size(a_3, kind=kindvar)
    |                               ^^^^^^^ 

semantic error: Atomic operations are not supported yet
   --> tests/errors/continue_compilation_2.f90:348:5
    |
348 |     call atomic_add (atom[1], this_image())
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Atomic operations are not supported yet
   --> tests/errors/continue_compilation_2.f90:349:5
    |
349 |     call atomic_add (atom[2], this_image())
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type-spec cannot contain an asterisk for a type parameter
   --> tests/errors/continue_compilation_2.f90:351:14
    |
351 |     print *, [character(*) :: "a", "b", "ball", "cat"]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Different `character` lengths 1 and 4 in array constructor
   --> tests/errors/continue_compilation_2.f90:353:25
    |
353 |     print *, ["a", "b", "ball", "cat"]
    |                         ^^^^^^ 

semantic error: Different `character` lengths 2 and 5 in array constructor
   --> tests/errors/continue_compilation_2.f90:354:27
    |
354 |     print *, ["a1", "b1", "ball1", "cat1"]
    |                           ^^^^^^^ 

semantic error: Element in `real(8)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:357:20
    |
357 |     print *, [x_3, [1., 2.]]
    |                    ^^^^^^^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:359:18
    |
359 |     print *, [1, 2.]
    |                  ^^ 

semantic error: Element in `integer(4)` array constructor is `real(4)`
   --> tests/errors/continue_compilation_2.f90:361:18
    |
361 |     print *, [1, [1., 2.]]
    |                  ^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
   --> tests/errors/continue_compilation_2.f90:363:14
    |
363 |     print *, dfloat(y_3)
    |              ^^^^^^^^^^^ 

semantic error: `dim` argument of `Sum` intrinsic must be INTEGER
   --> tests/errors/continue_compilation_2.f90:365:29
    |
365 |     print *, sum([1, 2, 3], 1.1)
    |                             ^^^ 

semantic error: `mask` argument to `Sum` must be a scalar or array of logical type
   --> tests/errors/continue_compilation_2.f90:367:32
    |
367 |     print *, sum([1, 2, 3], 1, 1.1)
    |                                ^^^ 

semantic error: `dim` argument of `Sum` intrinsic must be INTEGER
   --> tests/errors/continue_compilation_2.f90:369:29
    |
369 |     print *, sum([1, 2, 3], .true., 1.1)
    |                             ^^^^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:371:13
    |
371 |     print*, dint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dint`
   --> tests/errors/continue_compilation_2.f90:372:13
    |
372 |     if (abs(dint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^ 

semantic error: Argument 1 of dlgama must be of double precision real type
   --> tests/errors/continue_compilation_2.f90:374:14
    |
374 |     print *, dlgama(2.7)
    |              ^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:376:13
    |
376 |     print*, dnint(1.0_8, 8)
    |             ^^^^^^^^^^^^^^^ 

semantic error: Too many arguments to call `dnint`
   --> tests/errors/continue_compilation_2.f90:377:13
    |
377 |     if (abs(dnint(1.0_8, 8) - 1.0_8) > 10e-5 ) error stop
    |             ^^^^^^^^^^^^^^^ 

semantic error: Do concurrent loop variable `j` cannot be part of local expression
   --> tests/errors/continue_compilation_2.f90:379:30
    |
379 |     do concurrent (j = 1:Ny) local(i_1, j)
    |                              ^^^^^^^^^^^^^ 

semantic error: Assignment to loop variable `i_2` is not allowed
   --> tests/errors/continue_compilation_2.f90:386:9
    |
386 |         i_2 = j_1 + 1
    |         ^^^ 

semantic error: Step expression (Increment) in DO loop cannot be zero
   --> tests/errors/continue_compilation_2.f90:392:20
    |
392 |     do i_2 = 1, 5, 0
    |                    ^ 

semantic error: first argument of `dprod` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:396:13
    |
396 |     print*, dprod(4.23_8, 4.3_8)
    |             ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Dreal expects (complex64) as arguments
   --> tests/errors/continue_compilation_2.f90:399:14
    |
399 |     print *, dreal(a_4)
    |              ^^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'complex' intrinsic. It accepts exactly 2 arguments.
   --> tests/errors/continue_compilation_2.f90:401:11
    |
401 |     a_5 = complex(1)
    |           ^^^^^^^^^^ 

semantic error: Argument of intrinsic must be an integer
   --> tests/errors/continue_compilation_2.f90:403:14
    |
403 |     print *, float(y_4)
    |              ^^^^^^^^^^ 

semantic error: Invalid argument `start` supplied
   --> tests/errors/continue_compilation_2.f90:405:5
    |
405 |     FLUSH(unit=10, start=100)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type mismatch in argument `x`: expected `integer(4)` but got `real(4)`.
   --> tests/errors/continue_compilation_2.f90:407:16
    |
407 |     print *, f(42.9)
    |                ^^^^ 

semantic error: Argument 1 to Ichar must have length 1
   --> tests/errors/continue_compilation_2.f90:409:13
    |
409 |     print*, ichar("okay")
    |             ^^^^^^^^^^^^^ 

semantic error: first argument of `idint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:411:14
    |
411 |     print *, idint(4.5)
    |              ^^^^^^^^^^ 

semantic error: first argument of `ifix` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:413:14
    |
413 |     print *, ifix(4.23_8)
    |              ^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 1(1 and 3)
   --> tests/errors/continue_compilation_2.f90:416:5
    |
416 |     arr1 = [1, 2, 3]
    |     ^^^^^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 3(1 and 2)
   --> tests/errors/continue_compilation_2.f90:420:5
    |
420 |     idaa2_y = idaa2_x
    |     ^^^^^^^^^^^^^^^^^ 

semantic error: Shapes for operands are not conformable
   --> tests/errors/continue_compilation_2.f90:422:14
    |
422 |     print *, idlalb1_x .neqv. [.true., .true.]
    |              ^^^^^^^^^        ^^^^^^^^^^^^^^^^ 

semantic error: Shapes for operands are not conformable
   --> tests/errors/continue_compilation_2.f90:424:14
    |
424 |     print *, idlalb2_x1 .neqv. idlalb2_x2
    |              ^^^^^^^^^^        ^^^^^^^^^^ 

semantic error: Incompatible ranks 2 and 1 in assignment
   --> tests/errors/continue_compilation_2.f90:426:5
    |
426 |     iraa1_arr1 = [1, 2, 3]
    |     ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Incompatible ranks 1 and 3 in assignment
   --> tests/errors/continue_compilation_2.f90:428:5
    |
428 |     iraa2_arr3 = iraa2_arr1
    |     ^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: the first array argument to `where` must be of type logical
   --> tests/errors/continue_compilation_2.f90:430:11
    |
430 |     where([1, 2, 3, 4, 5]) iatw1_b = 1
    |           ^^^^^^^^^^^^^^^ 

semantic error: the first array argument to `where` must be of type logical
   --> tests/errors/continue_compilation_2.f90:435:11
    |
435 |     where(iatw2_i1) iatw2_b = 1
    |           ^^^^^^^^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:439:11
    |
439 |     where(.true.) itw1_b = 12121
    |           ^^^^^^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:442:11
    |
442 |     where(1) itw2_b = 12121
    |           ^ 

semantic error: the argument to `where` must be an array
   --> tests/errors/continue_compilation_2.f90:445:11
    |
445 |     where(max(1.33, 2.67)) itw3_b = 12121
    |           ^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Radix expects (int) or (real) as arguments
   --> tests/errors/continue_compilation_2.f90:451:14
    |
451 |     print *, radix((2.4, 1.0))
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: datan2 was declared as a variable, it can't be called as a function
   --> tests/errors/continue_compilation_2.f90:455:14
    |
455 |     print *, datan2(x,y)
    |              ^^^^^^^^^^^ help: use the compiler option "--implicit-interface" to use intrinsic functions

semantic error: datan2 was declared as a variable, it can't be called as a function
   --> tests/errors/continue_compilation_2.f90:456:12
    |
456 |     if(abs(datan2(x,y) - 0.59941916594660438) > 1d-6) error stop
    |            ^^^^^^^^^^^ help: use the compiler option "--implicit-interface" to use intrinsic functions

semantic error: `pos` argument of `ibclr` intrinsic must be non-negative
   --> tests/errors/continue_compilation_2.f90:458:14
    |
458 |     print *, ibclr(1, -2)
    |              ^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Dshiftl must be the same
   --> tests/errors/continue_compilation_2.f90:460:14
    |
460 |     print *, dshiftl(1, 1_8, 1)
    |              ^^^^^^^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Ior must be the same
   --> tests/errors/continue_compilation_2.f90:462:14
    |
462 |     print *, ior(1, 1_8)
    |              ^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Ieor must be the same
   --> tests/errors/continue_compilation_2.f90:464:14
    |
464 |     print *, ieor(1, 1_8)
    |              ^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Hypot must be the same
   --> tests/errors/continue_compilation_2.f90:466:14
    |
466 |     print *, hypot(1.0, 2.7_8)
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Ior must be the same
   --> tests/errors/continue_compilation_2.f90:468:14
    |
468 |     print *, ior(intr8_x, intr8_y)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Iand must be the same
   --> tests/errors/continue_compilation_2.f90:470:14
    |
470 |     print *, iand(intr9_x, intr9_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Ieor must be the same
   --> tests/errors/continue_compilation_2.f90:472:14
    |
472 |     print *, ieor(intr10_x, intr10_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type and kind of the relevant arguments of Hypot must be the same
   --> tests/errors/continue_compilation_2.f90:476:14
    |
476 |     print *, hypot(intr11_x, intr11_y)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: All arguments to max0 must be of the same type
   --> tests/errors/continue_compilation_2.f90:478:14
    |
478 |     print *, max(12, 13.94)
    |              ^^^^^^^^^^^^^^ 

semantic error: All arguments to min0 must be of the same type
   --> tests/errors/continue_compilation_2.f90:480:14
    |
480 |     print *, min(12, 13.94)
    |              ^^^^^^^^^^^^^^ 

semantic error: Unexpected args, Scale expects (real, int) as arguments
   --> tests/errors/continue_compilation_2.f90:482:14
    |
482 |     print *, scale([1, 2, 3], 2)
    |              ^^^^^^^^^^^^^^^^^^^ 

semantic error: Unexpected args, SetExponent expects (real, int) as arguments
   --> tests/errors/continue_compilation_2.f90:484:14
    |
484 |     print *, set_exponent([1, 2, 3], 2)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Non-variable expression for `iostat`
   --> tests/errors/continue_compilation_2.f90:487:5
    |
487 |     read(ici_buffer, *, iostat=ici_ios)
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: `iostat` must be scalar
   --> tests/errors/continue_compilation_2.f90:490:5
    |
490 |     read(insv_buffer, *, iostat=insv_ios(1:1))
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: The SHIFT argument must be less than or equal to the of SIZE argument
   --> tests/errors/continue_compilation_2.f90:492:14
    |
492 |     print *, ishftc(10, 6, 4)
    |              ^^^^^^^^^^^^^^^^ 

semantic error: The first argument of `cmplx` intrinsic is of complex type, the second argument in this case must be absent
   --> tests/errors/continue_compilation_2.f90:494:14
    |
494 |     print *, cmplx(complex_z , 1)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: `kind` argument of `aint` intrinsic must be a scalar
   --> tests/errors/continue_compilation_2.f90:496:36
    |
496 |     print *, aint([1.0, 2.0, 3.0], [4, 4])
    |                                    ^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:498:5
    |
498 |     tm1_x = "x"
    |     ^^^^^   ^^^ type mismatch (integer and string)

semantic error: Type mismatch in binary operator, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:500:13
    |
500 |     tm2_x = 5 + "x"
    |             ^   ^^^ type mismatch (integer and string)

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:500:5
    |
500 |     tm2_x = 5 + "x"
    |     ^^^^^       ^^^ type mismatch (integer and string)

semantic error: Variable 'mycircle' doesn't have any member named, 'mymember'.
   --> tests/errors/continue_compilation_2.f90:507:14
    |
507 |     print *, myCircle%mymember
    |              ^^^^^^^^^^^^^^^^^ 

semantic error: Unequal character lengths in MERGE intrinsic
   --> tests/errors/continue_compilation_2.f90:511:13
    |
511 |     print*, merge("okay", "ok", .true.)
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `idint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:513:14
    |
513 |     print *, idint(4.23)
    |              ^^^^^^^^^^^ 

semantic error: first argument of `idint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:514:14
    |
514 |     print *, idint(idint_kind_mismatch)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Argument 1 to Ichar must have length 1
   --> tests/errors/continue_compilation_2.f90:516:14
    |
516 |     print *, ichar(ichar_runtime)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `dprod` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:518:14
    |
518 |     print *, dprod(dprod_1, dprod_2)
    |              ^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: second argument of `dprod` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:519:14
    |
519 |     print *, dprod(dprod_3, dprod_2)
    |              ^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `idnint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:521:14
    |
521 |     print *, idnint(3.5)
    |              ^^^^^^^^^^^ 

semantic error: first argument of `idnint` must have kind equal to 8
   --> tests/errors/continue_compilation_2.f90:522:14
    |
522 |     print *, idnint(idnint_runtime)
    |              ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: first argument of `ifix` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:524:14
    |
524 |     print *, ifix(4.23_8)
    |              ^^^^^^^^^^^^ 

semantic error: first argument of `ifix` must have kind equal to 4
   --> tests/errors/continue_compilation_2.f90:525:14
    |
525 |     print *, ifix(ifix_runtime)
    |              ^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to min0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:527:14
    |
527 |     print *, min(.true., .false.)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to min0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:528:14
    |
528 |     print *, min(min_max, min_max)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to max0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:530:14
    |
530 |     print *, max(.true., .false.)
    |              ^^^^^^^^^^^^^^^^^^^^ 

semantic error: Arguments to max0 must be of real, integer or character type
   --> tests/errors/continue_compilation_2.f90:531:14
    |
531 |     print *, max(min_max, min_max)
    |              ^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Argument of 'size' must be an array
   --> tests/errors/continue_compilation_2.f90:536:19
    |
536 |     print *, size(ichar_runtime)
    |                   ^^^^^^^^^^^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
   --> tests/errors/continue_compilation_2.f90:537:5
    |
537 |     lhs = rhs
    |     ^^^   ^^^ type mismatch (`string` and `string[:]`)

semantic error: Missing actual argument 'string' in call to 'index'
   --> tests/errors/continue_compilation_2.f90:538:14
    |
538 |     print *, index( substring = 'de', back = .true. )
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Function 'compiler_options' not found (not user defined nor intrinsic)
   --> tests/errors/continue_compilation_2.f90:539:14
    |
539 |     print *, compiler_options()
    |              ^^^^^^^^^^^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:540:11
    |
540 |     print "(AF9.6)", 'pi =', 4*atan(1.0)
    |           ^^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:541:14
    |
541 |     write (*,"(ai0)", iostat=ierr) "hi", 3
    |              ^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:543:14
    |
543 |     write (*,badfmt_p) "hi", 3
    |              ^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:544:14
    |
544 |     write (*,badfmt_s) "hi", 3
    |              ^^^^^^^^ 

semantic error: Function 'add_parens' not found (not user defined nor intrinsic)
   --> tests/errors/continue_compilation_2.f90:545:15
    |
545 |     write (*, add_parens (badfmt_s)) "hi", 3
    |               ^^^^^^^^^^^^^^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:547:11
    |
547 |     print "(aai6)", a,"hi",15
    |           ^^^^^^^^ 

warning: Format string missing comma between descriptors (F2023 constraint C1302)
   --> tests/errors/continue_compilation_2.f90:547:11
    |
547 |     print "(aai6)", a,"hi",15
    |           ^^^^^^^^ 

warning: `sleep` is a non-standard extension
   --> tests/errors/continue_compilation_2.f90:548:5
    |
548 |     call sleep(1)
    |     ^^^^^^^^^^^^^ not part of the Fortran standard

semantic error: Missing actual argument 'x' in call to 'cmplx'
   --> tests/errors/continue_compilation_2.f90:549:9
    |
549 |     a = cmplx(y = 2)
    |         ^^^^^^^^^^^^ 

semantic error: shape argument not specified in c_f_pointer even though fptr is an array.
   --> tests/errors/continue_compilation_2.f90:551:33
    |
551 |     call c_f_pointer(queries_3, cfp_y_3)    
    |                                 ^^^^^^^ 

semantic error: Dummy argument 'x' of pure function must have INTENT(IN) or VALUE attribute
   --> tests/errors/continue_compilation_2.f90:595:20
    |
595 |         integer :: x, y
    |                    ^ 

semantic error: Dummy argument 'y' of pure function must have INTENT(IN) or VALUE attribute
   --> tests/errors/continue_compilation_2.f90:595:23
    |
595 |         integer :: x, y
    |                       ^ 
